@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.791 2008/10/30 09:36:59 mh Exp $
+# $Id: CHANGES,v 1.792 2008/10/30 09:53:17 tr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.0 beta1 (2009/??/??)
+ - (2008/10/30) Fixed bug# 2371 - "Panic, no user data!" message should be more
+    verbose.
  - (2008/10/29) Added additional default attributes of customer attributes like
     (phone, fax, mobile, street, zip, city). Use scripts/DBUpdate-to-2.4.*.sql
     for upgrading.
